tweet button added

--- a/index.html
+++ b/index.html
@@ -23,10 +23,16 @@
         </div>
         <h1><em>Twitter  Campaign</em></h1>
 
-        <div class="mobView">    
-            <input type="text" class="go" placeholder="Tweet number">         
+        <div class="mobView"> 
+            <div>   
+                <input type="text" class="go" placeholder="Tweet number">         
               
-            <a id="myAnchor" href=""><button class="goBtn">Go</button></a>
+                <a id="myAnchor" href=""><button class="goBtn">Go</button></a>
+            </div>
+
+            <div>
+                <a href="https://twitter.com/home" class="twitter-mention-button" data-size="large" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
         
         </div>
 
